Update 3 center video

--- a/Assets/screen.css
+++ b/Assets/screen.css
@@ -87,8 +87,7 @@ article + nav {
 }
 
 article iframe {
-    width: 560px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 article + nav ul li {
